Navigation is now fixed position for the static bar and sticky for the top bar and no longer stuck to the webpage this resolves scrolling bugs on mobile -Justin

--- a/Frontend/CSS/navStatic.css
+++ b/Frontend/CSS/navStatic.css
@@ -1,4 +1,6 @@
 #staticSidebar {
+    position: fixed;
+
     min-width: 55px;
     max-width: 55px;
 
